<?xml version="1.0" encoding="utf-8"?>
<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
	<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
		<LinearLayout
		    android:id="@+id/formulario_reserva"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		    android:visibility="visible"
		    android:padding="15dp" >
		    
		   	<TextView
		        android:id="@+id/textView_reserva_nombre_producto"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		   
		   	<LinearLayout
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:orientation="horizontal"
		   	    android:paddingTop="5dp"
		   	    android:paddingBottom="5dp" >
		   	    
		   	    <TextView
		   	        android:id="@+id/textView_reserva_reserva"
		   	        android:layout_width="wrap_content"
		   	        android:layout_height="wrap_content"
		   	        android:text="@string/reservar_unid"
		   	        android:textColor="?android:attr/textColorSecondary" />
		
		   	    <EditText
		   	        android:id="@+id/editText_unidades_reserva"
		   	        android:layout_width="45dp"
		   	        android:layout_height="wrap_content"
		   	        android:ems="10"
		   	        android:hint="@string/unid_hint"
		   	        android:inputType="number" >
		
		   	        <requestFocus />
		   	    </EditText>
		   	    
		   	    <TextView
		   	        android:id="@+id/textView_reserva_unidades"
		   	        android:layout_width="wrap_content"
		   	        android:layout_height="wrap_content"
		   	        android:text="@string/unidades"
		   	        android:textColor="?android:attr/textColorSecondary" />
		   	    
		   	</LinearLayout>
		   	
		   	<TextView
		   	    android:id="@+id/textView_reserva_anombre"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:text="@string/anombrede"
		   	    android:textColor="?android:attr/textColorSecondary" />
		   	
		   	<EditText
		   	    android:id="@+id/editText_nombre_reserva"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:hint="@string/anombrede_hint"
		   	    android:visibility="gone"
		   	    android:inputType="textMultiLine" />
		   	
		   	<TextView
		   	    android:id="@+id/textView_reserva_correo"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:text="@string/correoelectronico"
		   	    android:visibility="gone"
		   	    android:textColor="?android:attr/textColorSecondary" />
		   	
		   	<EditText
		   	    android:id="@+id/editText_correo_reserva"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:hint="@string/correoelectronicoHint"
		   	    android:visibility="gone"
		   	    android:inputType="textMultiLine" />
		   	
		   	<TextView
		   	    android:id="@+id/textView_reserva_password"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:text="@string/password"
		   	    android:visibility="gone"
		   	    android:textColor="?android:attr/textColorSecondary" />
	
		   	<EditText
		   	    android:id="@+id/editText_password_reserva"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:hint="@string/passwordHint"
		   	    android:visibility="gone"
		   	    android:inputType="textPassword" />
		   	
		   	<TextView
		   	    android:id="@+id/textView_reserva_confirm_password"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:text="@string/confirmPassword"
		   	    android:visibility="gone"
		   	    android:textColor="?android:attr/textColorSecondary" />
	
		   	<EditText
		   	    android:id="@+id/editText_confirm_password_reserva"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:visibility="gone"
		   	    android:hint="@string/passwordHint"
		   	    android:inputType="textPassword" />
		   	
		   	<Button
		   	    android:id="@+id/btn_confirmar_reserva"
		   	    style="?android:attr/borderlessButtonStyle"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:visibility="gone"
		   	    android:text="@string/btn_confirmar_reserva" />
		   	
		   	<LinearLayout 
		   	    android:id="@+id/layout_buttons_reserva"
		   	    style="?android:attr/buttonBarStyle"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:orientation="horizontal" >
		   	
			   	<Button
			   	    android:id="@+id/btn_login_reserva"
			   	    style="?android:attr/buttonBarButtonStyle"
			   	    android:layout_width="0dp"
			   	    android:layout_height="match_parent"
			   	    android:layout_weight=".50"
			   	    android:text="@string/loginAlready" />
			   	
			   	<Button
			   	    android:id="@+id/btn_nueva_cuenta_reserva"
			   	    style="?android:attr/buttonBarButtonStyle"
			   	    android:layout_width="0dp"
			   	    android:layout_height="match_parent"
			   	    android:layout_weight=".50"
			   	    android:text="@string/newCliente" />
		   	
		   	</LinearLayout>
		   	
		   	<ProgressBar
			    android:id="@+id/loading_reserva"
			    style="?android:progressBarStyleLarge"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:visibility="gone" />
		
		</LinearLayout>
		
	</FrameLayout>
	
	<!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ListView
        android:id="@+id/left_drawer"
        style="@style/DrawerLayoutTheme"/>
</android.support.v4.widget.DrawerLayout>