<?xml version="1.0" encoding="utf-8"?>
<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
	<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
		<LinearLayout
		    android:id="@+id/formulario_login"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:gravity="center"
		    android:orientation="vertical"
		    android:padding="15dp" >
		    
		    <TextView
		   	    android:id="@+id/textView_login_correo"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:text="@string/correoelectronico"
		   	    android:textColor="?android:attr/textColorSecondary" />
		   	
		   	<EditText
		   	    android:id="@+id/editText_correo_login"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:hint="@string/correoelectronicoHint"
		   	    android:inputType="textMultiLine" />
		   	
		   	<TextView
		   	    android:id="@+id/textView_login_password"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:text="@string/password"
		   	    android:textColor="?android:attr/textColorSecondary" />
	
		   	<EditText
		   	    android:id="@+id/editText_password_login"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:hint="@string/passwordHint"
		   	    android:inputType="textPassword" />
		   	
		   	<Button
		   	    android:id="@+id/btn_confirmar_login"
		   	    style="?android:attr/borderlessButtonStyle"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:text="@string/login" />
		   	
		   	<ProgressBar
			    android:id="@+id/loading_login"
			    style="?android:progressBarStyleLarge"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:visibility="gone" />
		</LinearLayout>
	</FrameLayout>
	
	<!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ListView
        android:id="@+id/left_drawer"
        style="@style/DrawerLayoutTheme"/>
</android.support.v4.widget.DrawerLayout>