<?xml version="1.0" encoding="utf-8"?>
<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
	<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
		<LinearLayout
		    android:id="@+id/container"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		    android:visibility="visible"
		    android:padding="15dp" >
		
		    <com.android.volley.toolbox.NetworkImageView
		        android:id="@+id/imageView_detail_producto"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:adjustViewBounds="true"
		        android:scaleType="fitCenter"
		        android:minWidth="100dp"
		        android:maxHeight="200dp"
		        android:minHeight="200dp"
		        android:paddingBottom="5dp" />
		
		    <TextView
		        android:id="@+id/textView_detail_nombre_producto"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/textView_descripcion"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingTop="5dp"
		        android:textColor="?android:attr/textColorSecondary"
		        android:text="@string/descripcion" />
		    
		    <TextView
		        android:id="@+id/textView_detail_descripcion_producto"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:id="@+id/textView_tienda"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="?android:attr/textColorSecondary"
		        android:text="@string/tienda" />
		
		    <TextView
		        android:id="@+id/textView_detail_nombre_tienda"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.2"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:id="@+id/textView_detail_precio_producto"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:paddingTop="5dp"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		    
		    <LinearLayout 
		        style="?android:attr/buttonBarStyle"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
			    <Button
			        android:id="@+id/btn_reserva"
			        style="?android:attr/buttonBarButtonStyle"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/btn_reservar" />
			    
			    <Button
			        android:id="@+id/btn_compra"
			        style="?android:attr/buttonBarButtonStyle"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/btn_comprar" />
		    </LinearLayout>
		
		</LinearLayout>
		
		<com.android.volley.toolbox.NetworkImageView
		    android:id="@+id/imageView_detail_producto_zoom"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:visibility="gone" />
		
	</FrameLayout>
	<!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ListView
        android:id="@+id/left_drawer"
        style="@style/DrawerLayoutTheme"/>
</android.support.v4.widget.DrawerLayout>