<?xml version="1.0" encoding="utf-8"?>
<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
	<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	    
	    <LinearLayout 
	        android:id="@+id/container_tienda_detail"
	        android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		    android:visibility="visible"
		    android:padding="15dp" >
		    
	        <com.android.volley.toolbox.NetworkImageView
	            android:id="@+id/imageView_detail_tienda"
	            android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:adjustViewBounds="true"
		        android:scaleType="fitCenter"
		        android:minWidth="100dp"
		        android:maxHeight="200dp"
		        android:minHeight="200dp"
		        android:paddingBottom="5dp" />
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:padding="5dp">
	            
	            <TextView
		        android:id="@+id/textView_detail_nombre_tienda_detail"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
	            
	            <ImageView
	                android:id="@+id/imageView_fav_tienda_detail"
	                android:src="@android:drawable/star_big_off"
	                android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingStart="5dp"
		            android:paddingEnd="2dp"
		            android:paddingLeft="5dp"
		            android:paddingRight="2dp"
		            android:visibility="gone"/>
	            
	        </LinearLayout>
	        
	        
	        
	        <LinearLayout
	            android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:layout_weight="0.2"
		   	    android:orientation="horizontal"
		   	    android:paddingTop="5dp"
		   	    android:paddingBottom="5dp" >
		        <TextView
		            android:id="@+id/textView_detail_direccion_tienda"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingStart="5dp"
		            android:paddingEnd="5dp"
		            android:paddingRight="5dp"
		            android:text="@string/direccion"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		        
		        <TextView 
		            android:id="@+id/textView_detail_direccion_tienda_data"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:layout_weight="0.2"
		   	    android:orientation="horizontal"
		   	    android:paddingTop="5dp"
		   	    android:paddingBottom="5dp" >
	
		        <TextView
		            android:id="@+id/textView_detail_phone_tienda"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingEnd="5dp"
		            android:paddingRight="5dp"
		            android:paddingStart="5dp"
		            android:text="@string/phone"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		        
		        <TextView 
		            android:id="@+id/textView_detail_phone_tienda_data"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:layout_weight="0.2"
		   	    android:orientation="horizontal"
		   	    android:paddingTop="5dp"
		   	    android:paddingBottom="5dp" >
	
		        <TextView
		            android:id="@+id/textView_detail_correo_tienda"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingEnd="5dp"
		            android:paddingRight="5dp"
		            android:paddingStart="5dp"
		            android:text="@string/correoelectronico"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		        
		        <TextView 
		            android:id="@+id/textView_detail_correo_tienda_data"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:layout_weight="0.2"
		   	    android:orientation="horizontal"
		   	    android:paddingTop="5dp"
		   	    android:paddingBottom="5dp" >
	
		        <TextView
		            android:id="@+id/textView_detail_web_tienda"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingEnd="5dp"
		            android:paddingRight="5dp"
		            android:paddingStart="5dp"
		            android:text="@string/web"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		        
		        <TextView 
		            android:id="@+id/textView_detail_web_tienda_data"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
	        
	        <Button
			   	    android:id="@+id/btn_locate_tienda"
			   	    style="?android:attr/buttonBarStyle"
			   	    android:layout_width="match_parent"
			   	    android:layout_height="wrap_content"
			   	    android:text="@string/btn_locate_tienda" />
	            
	    </LinearLayout>
	
	</FrameLayout>
	
	<!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ListView
        android:id="@+id/left_drawer"
        style="@style/DrawerLayoutTheme"/>
</android.support.v4.widget.DrawerLayout>